--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ a:hover {
 }
 
 .nav__container {
+    width: 100%;
+    display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 40px 0 40px;
@@ -68,7 +70,7 @@ a:hover {
     margin: 0;    
 }
 
-.logo__treact:hover {
+.logo__link:hover {
     color: #6415ff;
     transition: all 300ms ease;
 }
@@ -167,14 +169,81 @@ button {
     background: #6415ff;
     border-radius: 9999px;
     cursor: pointer;
-    padding: 20px 0;
-    width: 35%;
+    padding: 20px 45px;
+
+}
+
+button:hover {
+    background-color: rgb(80 17 204);
+    color: #f7fafc;
+    transition: all 300ms ease;
+    text-decoration: none;
 }
 
 .container {
     padding: 120px 0;
     margin: 0 40px;
 }
+
+.btn__menu {
+    background-color: transparent;
+    font-size: 40px;
+    text-align: center;
+    border: none;
+    color: #7432d6;
+    display: none;
+}
+ 
+.menu__backdrop {
+    position: absolute;
+    background-color: #242424;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    transition: all 300ms ease; 
+    opacity: 0;
+    visibility: hidden;
+}
+
+.menu--open .menu__backdrop {
+    visibility: visible;
+    opacity: 1;
+}
+
+.menu--open {
+    max-height: 100vh;
+    overflow-y: hidden;
+}
+
+.menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu__list {
+    padding: 32px 0;
+}
+
+.menu__link {
+    font-size: 40px;
+    text-decoration: none;
+    color: white;
+}
+.btn__menu--close {
+position: absolute;
+right: 20px;
+top: 10px;
+padding: 8px;
+color: white;
+}
+
 
 
 /* 
@@ -258,6 +327,13 @@ border: 2px solid rgb(180, 183, 187);
     padding: 20px 0;
 }
 
+.header__action:hover {
+    background-color: rgb(80 17 204);
+    color: #f7fafc;
+    transition: all 300ms ease;
+    text-decoration: none;
+}
+
 .header__action--alt {
     text-align: center;
     display: none;
@@ -269,6 +345,13 @@ border: 2px solid rgb(180, 183, 187);
     font-weight: 700;
     margin: 10px 10px 10px 10px;
     padding: 20px 0;
+}
+
+.header__action--alt:hover {
+    background-color: rgb(80 17 204);
+    color: #f7fafc;
+    transition: all 300ms ease;
+    text-decoration: none;
 }
 
 .customers-logo__strip--container {
@@ -454,10 +537,9 @@ VALUES
     flex-direction: row-reverse;
 }
 .values__description {
-    display: flex;
     flex-direction: column;
     width: 50%;
-    padding: 40px 40px;
+    padding: 20px 45px;
 }
 
 .values__img {
@@ -592,7 +674,14 @@ PRICING
     background: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
     border-top: none;
     color: white;
-    
+}
+
+#personal__action:hover,
+#business__action:hover,
+#enterprise__action:hover {
+    transform: translate(4px, -4px);
+    box-shadow: -10px -10px 50px 5px rgba(0,0,0,0.5);
+    transition: all 300ms ease;
 }
 
 .plan__header {
@@ -632,9 +721,7 @@ PRICING
     border-bottom-width: 2px;
     align-items: center;
     padding: 40px 40px;
-    width: 100%;
-
-    
+    width: 100%;   
 }
 
 .main__features {
@@ -789,7 +876,6 @@ blockquote {
 
 .slider__control {
     display: flex;
-
 }
 
 .slider__arrow {
@@ -797,18 +883,27 @@ blockquote {
     justify-content: center;
     align-items: center;
     color: #6415ff;
-    background-color: #edf2f7;
+    background-color: rgb(226, 232, 240);
     margin: 0 15px;
-    padding: 20px;
+    padding: 24px;
     border-radius: 9999px;
     opacity: 1;
 
 }
 
-.vertical__line {
-    width: 5px;
-    height: 10px;
-    color: rgb(211, 20, 20);
+.slider__arrow:hover {
+    color: rgb(100 21 255);
+    background-color: rgb(237 242 247);
+    text-decoration: none;
+}
+ 
+
+
+.vertical-line {
+    height: 56%;
+    border-left: 2px solid #edf2f7;
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
 }
 
 /* 
@@ -1103,6 +1198,7 @@ footer {
 }
 
 .social-icon:hover {
+    color: rgb(26 32 44);
     background-color: rgb(167, 182, 192);
 }
 
@@ -1112,6 +1208,10 @@ footer {
 
     .nav__links {
         display: none;
+    }
+
+    .btn__menu {
+        display: flex;
     }
 
     .header__row {
@@ -1478,6 +1578,10 @@ footer {
 /* SMALL PHONES, LARGE SMARTPHONES */
 @media (max-width: 550px) {
 
+    .btn__menu {
+        display: flex;
+    }
+    
     .row {
         padding: 100px 0;
     }
@@ -1564,7 +1668,7 @@ footer {
     button {
         margin: 40px 0 0;
     }
-
+        
     .steps__heading {
         font-size: 45px;
         font-weight: 900;
