--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 nav {
     height: 80px;
     display: flex;
+    padding: 40px 40px 0 40px;
 }
 
 img {
@@ -38,9 +39,9 @@ a:hover {
 .nav__container {
     width: 100%;
     display: flex;
+    flex: 1 1 0%;
     justify-content: space-between;
     align-items: center;
-    margin: 0 40px 0 40px;
 }
 
 .nav__links {
@@ -129,7 +130,7 @@ li {
 }
 
 h1 {
-    font-size: 45px;
+    font-size: 42px;
     font-weight: 900;
     line-height: 1.25;
     opacity: 1;
@@ -194,6 +195,10 @@ button:hover {
     display: none;
     padding: 0;
     transition: all 300ms ease;
+}
+
+.btn__menu:focus {
+    color: #6415ff;
 }
  
 .menu__backdrop {
@@ -733,6 +738,7 @@ PRICING
 .plan__features {
     display: flex;
     flex-direction: column;
+    flex: 1 1 0%;
     border-bottom-width: 2px;
     align-items: center;
     padding: 40px;
@@ -816,12 +822,10 @@ PRICING
 }
 
 #personal__action {
+    width: 68%;
     color: rgb(226, 232, 240);
     background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
-    opacity: 1;
-    width: 68%;
     padding: 30px 10px;
-    text-transform: uppercase;
     letter-spacing: 0.05em;
 }
 
@@ -1794,7 +1798,7 @@ footer {
     }
 
     .values__para {
-        margin: 0;
+        margin: 40px 0 0;
         width: 100%;
     }
 
